--- a/values.yaml
+++ b/values.yaml
@@ -6,7 +6,7 @@ appConfig:
     team: engineer
 
 container:
-  enabled: false
+  enabled: true
   replicaCount: 0
   securityContext: {}
   podSecurityContext: {}
@@ -60,6 +60,23 @@ serviceAccount:
   enabled: true
   annotations: {}
   name: build-robot
+
+ingress:
+  enabled: true
+  className: ""
+  annotations:
+    {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 env:
   configMap:
